--- a/resources/style.css
+++ b/resources/style.css
@@ -37,41 +37,9 @@ font-weight: bold;
   font-weight: bold;
 }
 
-/*start mobile nav*/
-
-@media only screen and (max-width: 400px) {
-    .navigation li {
-    display: none;
-    }
-
-    .logo span {
-      display: none;
-    }
-
-    .logo img {
-      display: none;
-    }
-
-    .banner {
-        width: 90%;
-    }
-
-    .mobilenav img {
-        width: 50%;
-        display: flex;
-    }
-    .mobilenav img {
-        width: 90%;
-        justify-content: space-around;
-    }
-
-.links .navigation {
+.mobilenav {
   display: none;
 }
-
-}
-/*end mobile nav*/
-
 
 nav ul {
     display: flex;
@@ -159,10 +127,6 @@ padding-left: 20px;
 }
 
 
-.mobilenav {
-  display: none;
-}
-
 /*Articles*/
 
 .flex-box {
@@ -231,6 +195,10 @@ padding-left: 20px;
 
 .topics article {
   background-color: white;
+}
+
+.readmore {
+  text-decoration: none;
 }
 
 /*Classes*/
@@ -393,10 +361,10 @@ color: #4A4A4A;
     cursor: pointer;
 }
 
-.topics div:hover {
-    background: #deb887;
-    cursor: pointer;
+.responsiveclass {
+  display: none;
 }
+
 
 /*Footer*/
 
@@ -408,7 +376,122 @@ footer .footer {
   width: 100%;
 }
 
-@media only screen and (min-width:481px) {
+/*start mobile nav*/
+
+@media only screen and (max-width: 600px) {
+.navigation li {
+  display: none;
+}
+
+.mobilenav {
+  display: flex;
+}
+
+.mobilenav ul li a {
+  display: flex;
+  height: 4rem;
+  width: 4rem;
+  align-items: center;
+}
+
+.mobilenav ul {
+  width: 90%;
+  justify-content: space-around;
+}
+
+.logo span {
+  display: none;
+}
+
+.logo img {
+  display: none;
+}
+
+.banner-img {
+display: inline-grid;
+width: 100%;
+}
+
+.banner {
+width: 75%;
+align-items: center;
+}
+
+
+.mobilenav img {
+  width: 90%;
+  display: flex;
+  justify-content: space-around;
+}
+
+
+.links .navigation {
+  display: none;
+}
+
+
+.articlecontents {
+  display: none;
+}
+
+.topics .flex-box {
+  width: 200%;
+  align-items: center;
+  justify-content: center;
+}
+
+.topics article {
+  flex-direction: column;
+justify-content: center;
+align-items: center;
+border: none;
+}
+
+
+.classwrap {
+  display: none;
+}
+
+.responsiveclass {
+  display: flex;
+  flex-direction: column;
+}
+
+.responsiveclass h2 {
+  background: white;
+  padding: 1.5rem 0 1.5rem 1rem;
+  margin: 0.25rem 1.5rem;
+}
+
+.responsiveclass h2 a {
+  color: #4A4A4A;
+  font-size: 2rem;
+  letter-spacing: 2px;
+  font-weight: 400;
+  text-decoration: none;
+}
+
+.responsiveclass h2:hover {
+  background: #deb887;
+}
+
+.exhibits-container {
+  width: 100%;
+  align-items:: center;
+}
+
+.exhibits-container h2 {
+  display: none;
+}
+
+.exhibits-container h3 {
+  display: none;
+}
+
+.topics {
+  display: none;
+}
+
 footer {
   border-top: solid 1px #694f44;
 }
@@ -426,3 +509,4 @@ footer {
   text-decoration: none;
 }
 }
+/*end mobile nav*/
